Finished cocycle addition code

--- a/CircularCoords.html
+++ b/CircularCoords.html
@@ -11,6 +11,7 @@
     <script src="tadasets.js"></script>
     <script src="tda.js"></script>
     <script src="ripser.js"></script>
+    <script src="dreimacutils.js"></script>
     <script src="circularcoords.js"></script>
 </head>
 <body>
