--- a/ripser.html
+++ b/ripser.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta charset="utf-8">
 <!--External Libraries -->
     <script src="jslibs/dat.gui.min.js"></script>
     <script src="jslibs/plotly.min.js"></script>
