Working on circular coordinates, and fixed returning cocycles since they were ints for some reason

--- a/ripser.html
+++ b/ripser.html
@@ -25,7 +25,7 @@
         let canvas2D = document.getElementById("canvas2D");
         let feedbackCanvas = document.getElementById("feedbackText");
         let tda = new TDA(canvas2D, feedbackCanvas);
-        let rips = new Ripser(tda, 2, 1, false, "dgmsCanvas").setupMenu();
+        let rips = new Ripser(tda, 2, 1, true, "dgmsCanvas").setupMenu();
     </script>
 
 </body>
