--- a/tests.html
+++ b/tests.html
@@ -11,6 +11,13 @@
     <script src="jslibs/mocha.js"></script>
     <script src="jslibs/proclaim.js"></script>
     <script>mocha.setup('bdd');</script>
+
+    <script src="a.out.js"></script>
+    <script src="debugging.js"></script>
+    <script src="plotting.js"></script>
+    <script src="tadasets.js"></script>
+    <script src="tda.js"></script>
+    <script src="ripser.js"></script>
     <script src="dreimacutils.js"></script>
     <script src="tests.js"></script>
     <script>
