Switching emscripten ripser over to a web worker, and fully optimizing on compilation

--- a/ripser.html
+++ b/ripser.html
@@ -6,7 +6,6 @@
     <script src="jslibs/plotly.min.js"></script>
 
 <!-- Our Libraries -->
-    <script src="a.out.js"></script>
     <script src="debugging.js"></script>
     <script src="plotting.js"></script>
     <script src="tadasets.js"></script>
@@ -14,6 +13,7 @@
     <script src="ripser.js"></script>
 </head>
 <body>
+    <div id = "pagestatus"></div>
     <div id = "feedbackText"></div>
     <canvas id="canvas2D" width="600" height="600" style="border:1px solid #000000;">
     </canvas>
