Web worker script isn't loading through the browser, so seeing if this will help

--- a/ripser.html
+++ b/ripser.html
@@ -10,6 +10,7 @@
     <script src="plotting.js"></script>
     <script src="tadasets.js"></script>
     <script src="tda.js"></script>
+    <script src="ripserem.js"></script>
     <script src="ripser.js"></script>
 </head>
 <body>
