--- a/CircularCoords.html
+++ b/CircularCoords.html
@@ -11,6 +11,7 @@
     <script src="plotting.js"></script>
     <script src="tadasets.js"></script>
     <script src="tda.js"></script>
+    <script src="ripserem.js"></script>
     <script src="ripser.js"></script>
     <script src="dreimacutils.js"></script>
     <script src="circularcoords.js"></script>
