Circular coordinates code in place, now need to debug

--- a/CircularCoords.html
+++ b/CircularCoords.html
@@ -4,6 +4,7 @@
 <!--External Libraries -->
     <script src="jslibs/dat.gui.min.js"></script>
     <script src="jslibs/plotly.min.js"></script>
+    <script src="jslibs/numeric-1.2.6.min.js"></script>
 
 <!-- Our Libraries -->
     <script src="a.out.js"></script>
@@ -16,6 +17,7 @@
     <script src="circularcoords.js"></script>
 </head>
 <body>
+    <div id = "pagestatus"></div>
     <div id = "feedbackText"></div>
     <canvas id="canvas2D" width="600" height="600" style="border:1px solid #000000;">
     </canvas>
@@ -28,6 +30,10 @@
         let feedbackCanvas = document.getElementById("feedbackText");
         let tda = new TDA(canvas2D, feedbackCanvas);
         let ccords = new CircularCoords(tda, canvas2D, "dgmsCanvas");
+
+        /*R = [[0, 1], [2, 3], [0, 3], [2, 1]];
+        Delta0 = makeDelta0(R, 4);
+        console.log(Delta0);*/
     </script>
 
 </body>
