--- a/CircularCoords.html
+++ b/CircularCoords.html
@@ -1,13 +1,13 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="Cache-control" content="no-cache">
 <!--External Libraries -->
     <script src="jslibs/dat.gui.min.js"></script>
     <script src="jslibs/plotly.min.js"></script>
     <script src="jslibs/numeric-1.2.6.min.js"></script>
 
 <!-- Our Libraries -->
-    <script src="a.out.js"></script>
     <script src="debugging.js"></script>
     <script src="plotting.js"></script>
     <script src="tadasets.js"></script>
